# monadics

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci_tests.yml
cmake/: add_beman_library.cmake  add_beman_test.cmake
examples/: CMakeLists.txt  monadics_std_usage.cpp
examples/dev/: CMakeLists.txt  main.cpp
examples/log/: CMakeLists.txt  boo.cpp  boo.hpp  foo.cpp  foo.hpp  log-config.hpp  log.hpp  main.cpp
include/beman/monadics/: and_then.hpp  box.hpp  box_traits.hpp  concepts.hpp  lift.hpp  monadics.hpp  or_else.hpp  pipe.hpp  rebind.hpp  transform.hpp
include/beman/monadics/concepts/: decomposable.hpp  instance_of.hpp  same_as.hpp  same_template_as.hpp
include/beman/monadics/detail/: and_then.hpp  as_pointer.hpp  decomposable.hpp  deduce_error_fn.hpp  deduce_error_type.hpp  deduce_rebind.hpp  deduce_rebind_error.hpp  deduce_value_fn.hpp  deduce_value_query_fn.hpp  deduce_value_type.hpp  extract_value_type.hpp  instance_of.hpp  meta_extract_value_type.hpp  meta_rebind_error.hpp  meta_rebind_value.hpp  or_else.hpp  pipe.hpp  same_box.hpp  same_template.hpp  same_unqualified_as.hpp  transform.hpp  transform_error.hpp  utility.hpp
include/beman/monadics/std/: expected.hpp  optional.hpp  shared_ptr.hpp
include/beman/monadics/type_traits/: decompose.hpp  extract_error_type.hpp  extract_value_type.hpp  invoke_result.hpp  rebind_value.hpp
src/beman/monadics/: CMakeLists.txt  concepts.cpp  lift.cpp  monadics.cpp  pipe.cpp
tests/beman/exemplar/: identity.test.cpp
tests/beman/monadics/: CMakeLists.txt  and_then.old.test.cpp  and_then.optional.test.cpp  and_then.test.cpp  box.test.cpp  box_traits.test.cpp  concepts.test.cpp  lift.test.cpp  monadics.test.cpp  or_else.test.cpp  rebind.test.cpp  std.hpp  transform.old.test.cpp  transform.test.cpp  transform_error.test.cpp
tests/beman/monadics/and_then/: expected.test.cpp  optional.test.cpp  raw_ptr.test.cpp  shared_ptr-min.test.cpp  shared_ptr.test.cpp
tests/beman/monadics/concepts/: CMakeLists.txt  decomposable.test.cpp  instance_of.test.cpp  same_template_as.test.cpp
tests/beman/monadics/enum/: and_then.test.cpp  compose.test.cpp  or_else.test.cpp  trait.hpp  trait.test.cpp  transform.test.cpp
tests/beman/monadics/expected/: and_then.test.cpp  compose.test.cpp  or_else.test.cpp  trait.hpp  trait.test.cpp  transform.test.cpp  transform_error.test.cpp
tests/beman/monadics/helpers/: myexpected.hpp  myoptional.hpp  optional-full.hpp  raw-ptr-full.hpp  shared-ptr-full.hpp
tests/beman/monadics/old/: and_then.optional.test.cpp  and_then.test.cpp  box_traits.test.cpp  or_else.test.cpp  transform.test.cpp  transform_error.test.cpp
tests/beman/monadics/old/and_then/: expected.test.cpp  optional.test.cpp  raw_ptr.test.cpp  shared_ptr.test.cpp
tests/beman/monadics/old/helpers/: myoptional.hpp  optional-full.hpp  raw-ptr-full.hpp  shared-ptr-full.hpp
tests/beman/monadics/old/or_else/: expected.test.cpp  optional.test.cpp  raw_ptr.test.cpp  shared_ptr.test.cpp
tests/beman/monadics/old/transform/: expected.test.cpp  optional.test.cpp  raw_ptr.test.cpp  shared_ptr.test.cpp
tests/beman/monadics/old/transform_error/: expected.test.cpp
tests/beman/monadics/optional/: and_then.test.cpp  compose.test.cpp  or_else.test.cpp  trait.hpp  trait.test.cpp  transform.test.cpp
tests/beman/monadics/or_else/: expected.test.cpp  optional.test.cpp  raw_ptr.test.cpp  shared_ptr.test.cpp
tests/beman/monadics/raw_ptr/: and_then.test.cpp  compose.test.cpp  or_else.test.cpp  trait.hpp  trait.test.cpp  transform.test.cpp  transform_error.test.cpp
tests/beman/monadics/shared_ptr/: and_then.test.cpp  compose.test.cpp  or_else.test.cpp  trait.hpp  trait.test.cpp  transform.test.cpp
tests/beman/monadics/transform/: expected.test.cpp  optional.test.cpp  raw_ptr.test.cpp  shared_ptr.test.cpp
tests/beman/monadics/transform_error/: expected.test.cpp
tests/beman/monadics/type_traits/: CMakeLists.txt  box.test.cpp  extract_error_type.test.cpp  extract_value_type.test.cpp  rebind_value.test.cpp
